--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.2",
+    "feather-icons": "^4.29.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.73.1",
-    "styled-components": "^6.1.3"
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "styled-components": "^6.1.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,6 +36,7 @@
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
